--- a/views/tasks.html.twig
+++ b/views/tasks.html.twig
@@ -3,24 +3,30 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>To Do List</h1>
+    <h1>Tasks</h1>
+
     {% if tasks is not empty %}
         <p>Here are all your tasks:</p>
         <ul>
-        {% for task in tasks %}
-            <li>{{ task.getDescription }}</li>
-
-        {% endfor %}
+            {% for task in tasks %}
+                <li><a href="/tasks/{{ task.getId }}">{{ task.getDescription }}</a></li>
+            {% endfor %}
         </ul>
     {% endif %}
 
     <form action='/tasks' method='post'>
-        <label for='description'>Task Description</label>
+        <label for='description'>Task description:</label>
         <input id='description' name='description' type='text'>
+        <label for='due_date'>Task due date:</label>
+        <input id='due_date' name='due_date' type='text'>
+
         <button type='submit'>Add task</button>
     </form>
+
     <form action='/delete_tasks' method='post'>
         <button type='submit'>Clear</button>
     </form>
+
+    <p><a href='/'>Home</a></p>
 </body>
 </html>
