add update methods to the tasks page

--- a/views/task.html.twig
+++ b/views/task.html.twig
@@ -4,6 +4,15 @@
 </head>
 <body>
     <h1>{{ task.getDescription }}</h1>
+    <h1>{{ task.getDueDate }}</h1>
+    {{ task.getComplete }}
+    {% if task.getComplete == true %}
+        <h1>Complete</h1>
+    {% else %}
+        <h1>Incomplete</h1>
+    {% endif %}
+
+
 
     {% if categories is not empty %}
         <p>Here are the categories for this task:</p>
@@ -25,6 +34,22 @@
           {% endfor %}
         </select>
         <button type='submit'>Add category</button>
+    </form>
+
+    <h5>Edit Task</h5>
+    <form action="/tasks/{{ task.getId }}" method="post">
+        <input name="_method" type="hidden" value="patch">
+
+        <label for="new_description">Description</label>
+        <input type="text" name="new_description" value="{{ task.getDescription }}" required>
+        <label for="new_due_date">Due</label>
+        <input type="text" name="new_due_date" value="{{ task.getDueDate }}" required>
+        <label for="new_complete">Complete?</label>
+        <select name="new_complete">
+            <option value="false">No</option>
+            <option value="true">Yes</option>
+        </select>
+        <button type="submit" name="button">Edit</button>
     </form>
 
     <p><a href='/'>Home</a></p>
